lab1/Test/L1-A-8-75.output
Error Type B at Line 13
Error Type B at Line 62
Error Type B at Line 66
Error Type B at Line 97
Error Type B at Line 134
